# fusion-dancing-eu.github.io

./: .gitignore  README.md  hugo.toml  index.html
.github/workflows/: hugo.yaml  update_from_discord.yaml  update_local_scenes.yaml
assets/css/: main.css
automation/: README.md  discord.py  discord_test.py  main.py  pyproject.toml
content/: archive.md  local-communities.md  local-scenes.md
content/dance-for-justice/: _index.md
content/darmstadt/: _index.md
content/frankfurt/: _index.md
content/heidelberg/: _index.md
content/rhein-main-neckar/: _index.md
content/strasbourg/: _index.md
content/stuttgart/: _index.md
content/torino/: _index.md
css/: main.css  mobile.css
data/: dance-for-justice.yaml  darmstadt.yaml  events.yaml  frankfurt.yaml  heidelberg.yaml  rhein-main-neckar.yaml  scenes.yaml  strasbourg.yaml  stuttgart.yaml
layouts/: index.calendar.ics  index.html  index.rss.xml
layouts/_default/: baseof.html
layouts/partials/: event-table.html  events.html
layouts/section/: list.calendar.ics  list.rss.xml
layouts/shortcodes/: events.html  localevents.html
static/: CNAME  community-events-example.ods
static/css/: main.css  mobile.css
