[project]
name = "fusion-events-management"
version = "0.1.0"
description = "Fetching local community events from CSV files and weekenders from Discord."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = ["black", "pytest"]
